--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </div>
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script src="newComponent.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
